1.10.0/_sources/examples_built/streamline_analysis/bundle_assignment_maps.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples_built/streamline_analysis/bundle_assignment_maps.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_built_streamline_analysis_bundle_assignment_maps.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_built_streamline_analysis_bundle_assignment_maps.py:


====================================
BUAN Bundle Assignment Maps Creation
====================================

This example explains how we can use BUAN :footcite:p:`Chandio2020a` to create
assignment maps on a bundle. Divide bundle into N smaller segments.


First import the necessary modules.

.. GENERATED FROM PYTHON SOURCE LINES 12-20

.. code-block:: Python


    import numpy as np

    from dipy.data import fetch_bundle_atlas_hcp842, get_two_hcp842_bundles
    from dipy.io.streamline import load_trk
    from dipy.stats.analysis import assignment_map
    from dipy.viz import actor, window








.. GENERATED FROM PYTHON SOURCE LINES 21-22

Download and read data for this tutorial

.. GENERATED FROM PYTHON SOURCE LINES 22-25

.. code-block:: Python


    atlas_file, atlas_folder = fetch_bundle_atlas_hcp842()








.. GENERATED FROM PYTHON SOURCE LINES 26-28

Read AF left and CST left bundles from already fetched atlas data to use them
as model bundles

.. GENERATED FROM PYTHON SOURCE LINES 28-34

.. code-block:: Python


    model_af_l_file, model_cst_l_file = get_two_hcp842_bundles()

    sft_af_l = load_trk(model_af_l_file, reference="same", bbox_valid_check=False)
    model_af_l = sft_af_l.streamlines








.. GENERATED FROM PYTHON SOURCE LINES 35-36

let's visualize Arcuate Fasiculus Left (AF_L) bundle before assignment maps

.. GENERATED FROM PYTHON SOURCE LINES 36-51

.. code-block:: Python


    interactive = False

    scene = window.Scene()
    scene.SetBackground(1, 1, 1)
    scene.add(actor.line(model_af_l, fake_tube=True, linewidth=6))
    scene.set_camera(
        focal_point=(-18.17281532, -19.55606842, 6.92485857),
        position=(-360.11, -30.46, -40.44),
        view_up=(-0.03, 0.028, 0.89),
    )
    window.record(scene=scene, out_path="af_l_before_assignment_maps.png", size=(600, 600))
    if interactive:
        window.show(scene)




.. image-sg:: /examples_built/streamline_analysis/images/sphx_glr_bundle_assignment_maps_001.png
   :alt: bundle assignment maps
   :srcset: /examples_built/streamline_analysis/images/sphx_glr_bundle_assignment_maps_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 52-60

.. rst-class:: centered small fst-italic fw-semibold

AF_L before assignment maps



Creating 100 bundle assignment maps on AF_L using BUAN
:footcite:p:`Chandio2020a`

.. GENERATED FROM PYTHON SOURCE LINES 60-73

.. code-block:: Python


    rng = np.random.default_rng()

    n = 100
    indx = assignment_map(model_af_l, model_af_l, n)
    indx = np.array(indx)

    colors = [rng.random(3) for si in range(n)]

    disks_color = []
    for i in range(len(indx)):
        disks_color.append(tuple(colors[indx[i]]))








.. GENERATED FROM PYTHON SOURCE LINES 74-75

let's visualize Arcuate Fasiculus Left (AF_L) bundle after assignment maps

.. GENERATED FROM PYTHON SOURCE LINES 75-90

.. code-block:: Python


    interactive = False

    scene = window.Scene()
    scene.SetBackground(1, 1, 1)
    scene.add(actor.line(model_af_l, fake_tube=True, colors=disks_color, linewidth=6))
    scene.set_camera(
        focal_point=(-18.17281532, -19.55606842, 6.92485857),
        position=(-360.11, -30.46, -40.44),
        view_up=(-0.03, 0.028, 0.89),
    )
    window.record(scene=scene, out_path="af_l_after_assignment_maps.png", size=(600, 600))
    if interactive:
        window.show(scene)




.. image-sg:: /examples_built/streamline_analysis/images/sphx_glr_bundle_assignment_maps_002.png
   :alt: bundle assignment maps
   :srcset: /examples_built/streamline_analysis/images/sphx_glr_bundle_assignment_maps_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 91-101

.. rst-class:: centered small fst-italic fw-semibold

AF_L after assignment maps


References
----------

.. footbibliography::


.. GENERATED FROM PYTHON SOURCE LINES 103-105

.. include:: ../../links_names.inc



.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 3.706 seconds)


.. _sphx_glr_download_examples_built_streamline_analysis_bundle_assignment_maps.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: bundle_assignment_maps.ipynb <bundle_assignment_maps.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: bundle_assignment_maps.py <bundle_assignment_maps.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: bundle_assignment_maps.zip <bundle_assignment_maps.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
